<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/titulo_textview"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/subtitulo_textview"
            android:textColor="@color/colorTexto"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6">

            <TextView
                android:id="@+id/texto_tentativas_textview"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="textEnd"
                android:text="@string/texto_tentativas_textview"
                android:textColor="@color/colorTexto"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numero_tentativas_textview"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="center"
                android:text="@string/default_tentativas_textview"
                android:textColor="@color/colorAccent"
                android:textSize="80sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/numero_edittext"
            android:layout_width="300dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:hint="@string/hint_numero_edittext"
            android:inputType="number" />

        <TextView
            android:id="@+id/feedback_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#ff0000"
            android:textSize="16sp"
            android:visibility="gone" />


        <Button
            android:id="@+id/tentar_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tentar_button"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/resetar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/resetar_button"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>